21 May 2007

* New layout for most of the fetch code. Now pretty much everything is done
  using a state machine for each fetch type rather than a mixture of linear
  code and state machine. Mail is now enqueued/dequeued using callbacks rather
  than returning status codes.

16 May 2007

* SHM_SYSV is no more.

10 May 2007

* Fix typo in manual and use DESTDIR in *akefile, from Frank Terbeck as a result
  of Debian package creation.

09 May 2007

* Code tidying in io.c and command.c.

08 May 2007

* Couple of fixes for stupid things in ARRAY_* macros, one of which was hiding
  a minor bug. Don't know what I was thinking when I wrote them.

04 May 2007

* "match tag ..." is now not supported.
* Permit actions to call other actions:

	action "one" ...
	action "two" ...
	action "three" {
		 ...
		actions { "one" "two" }
	}

  A maximum of five levels is permitted, spoiling the fun of:

	action "x" { action "x" }

30 April 2007

* Optionally verify SSL certificates. This can be turned on with the
  "verify-certificates" option and disabled per account by appending a
  "no-verify" flag to the definition.
* Option to use PCRE (build with make -DPCRE).

19 April 2007

* Count the number of messages properly when there is no done function (such as
  for NNTP).

10 April 2007

* Install into bin rather than sbin when using GNUmakefile. From Frank Terbeck.

06 April 2007

* fdm 1.1 released.

04 April 2007

* Set the socket non-blocking in before setting up SSL in connect.c, otherwise
  SSL_connect might block.

03 April 2007

* Instead of doing complicated things to see if a mmap'd region is okay, just
  fill it with zeros using write(2). This also avoids FS fragmentation on
  FreeBSD, per its mmap(2). Also use MAP_NOSYNC.

30 March 2007

* Allow plural and singular to be interchanged in most places, don't insist on
  "accounts { "abc" }" and "account "abc"".

29 March 2007

* Tags are now done using an action (tag) rather than a special-case match